# MCModJScriptLoader

./: .gitignore  CMakeLists.txt  MCModJScriptLoader.cpp  MCModJScriptLoader.sln  README.md
Example/: tsconfig.json
Example/@httptypes/: franc.bundle.d.ts
Example/@types/: global.d.ts
Example/@types/SignCode/: index.d.ts
Example/@types/http/: index.d.ts
Example/@types/imgui/: index.d.ts
Example/@types/工具/: index.d.ts
Example/AutoSprint/src/: AutoSprint.ts
Example/MoreDropItems/: tsconfig.json
Example/MoreDropItems/src/: MoreDropItems.ts
Example/MouseEventHook/src/: mouseEventHook.ts
Example/Test/: tsconfig.json
Example/Test/src/: Test.ts
Example/Test/src/module/: ClientInstance.ts  GuiData.ts
Example/src/: AutoSprint.ts  ChatTr.ts  MoreDropItems.ts  Test.ts  mouseEventHook.ts
Example/src/module/: AsyncRunner.ts
Example/src/module/SDK/: ClientInstance.ts  ClientInstanceScreenModel.ts  GuiData.ts  MinecraftGame.ts
Example/src/module/Tr/: TrBase.ts
Example/src/module/Tr/MicrosoftBing/: Tr.ts
Example/src/module/Tr/XunFei/: Tr.ts
Example/types/: global.d.ts
Example/types/SignCode/: index.d.ts
Example/types/http/: index.d.ts
Example/types/imgui/: index.d.ts
Example/types/事件系统/: index.d.ts
Example/types/工具/: index.d.ts
MCModJScriptLoader/: MCModJScriptLoader.vcxproj
client/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ModManager.cpp  ModManager.h
client/mem/: CMakeLists.txt  mem.cpp  mem.h
client/utils/: CMakeLists.txt  assets_net.cpp  assets_net.h  hmath.h  signcode.cpp  signcode.h
hook/: CMakeLists.txt  Hook.cpp  Hook.h  HookImgui.h  HookManager.cpp  HookManager.h
include/: CMakeLists.txt
include/LightHook/: LightHook.h
include/imgui/: CMakeLists.txt  appConsole.h  imgui_uwp_wndProc.cpp  imgui_uwp_wndProc.h
include/imgui_kiero/: CMakeLists.txt  kiero.cpp  kiero.h
include/imgui_toggle/: CMakeLists.txt  imgui_offset_rect.h  imgui_toggle.cpp  imgui_toggle.h  imgui_toggle_renderer.h
include/quickjs/: quickjs.h
jsClass/: CmakeLists.txt  JSManager.cpp  JSManager.h  nativeTypes.h
jsClass/eventSystem/: CMakeLists.txt  JsModule_eventSystem.h  JsModule_eventSystme.cpp
jsClass/hook/: CmakeLists.txt  hookClass.cpp  hookClass.h
jsClass/http/: CmakeLists.txt  JsModule_http.cpp
jsClass/imgui/: CMakeLists.txt  JsModule_imgui.cpp
jsClass/imgui/class/: imguiclass.cpp  imguiclass.h
jsClass/mem/: CMakeLists.txt  JsModule_mem.cpp  JsModule_mem.h  memClass.cpp  memClass.h
jsClass/nativePoint/: CMakeLists.txt  nativePointClass.cpp  nativePointClass.h
jsClass/otherProperties/: CMakeLists.txt  otherJSClass.cpp  otherJSClass.h
jsClass/signcode/: CMakeLists.txt  JsModule_signcode.cpp  JsModule_signcode.h
jsClass/spdlog/: CMakeLists.txt  spdlogClass.cpp  spdlogClass.h
